--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 ## Unity ##
+
 *.cs diff=csharp text
 *.cginc text
 *.shader text
@@ -12,8 +13,4 @@
 *.meta -merge eol=lf
 *.controller -merge eol=lf
 *.spriteatlas -merge eol=lf
-Assets/Plugins/iOS/libSingular.a filter=lfs diff=lfs merge=lfs -text
-Assets/Plugins/iOS/Firebase/libFirebaseCppApp.a filter=lfs diff=lfs merge=lfs -text
-Assets/Helpshift/Plugins/iOS/Helpshift.framework.Helpshift filter=lfs diff=lfs merge=lfs -text
-Assets/Helpshift/Plugins/iOS/Helpshift.framework/Helpshift filter=lfs diff=lfs merge=lfs -text
-Assets/Resources/I2Languages.asset filter=lfs diff=lfs merge=lfs -text
+*.so -merge eol=lf
